--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     </div>
 
   </div>
+  
+  <button type="button" class=" restart" name="button" >Click Me!</button>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="game.js">
